Adding spring-web-security